maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:3: error: Unit does not take parameters
    keephandonwall()
                  ^