maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!overbiscuit) {
    keephandonwall()
  prendBiscuit()
  }
}

def keephandonwall = {
  gauche()
  if (estFaceMur())
    droite()
  avance()
}

def overbiscuit:Boolean = {
  if (estSurBiscuit())
  	return true
  return false
}